Подключение БД Sql-Server, начало работы с Entity Framework. Изменения, временна удалена функция лайка, переработы модели товара и заказа под БД

--- a/Shop/appsettings.json
+++ b/Shop/appsettings.json
@@ -1,5 +1,6 @@
 {
   "AllowedHosts": "*",
+  "ConnectionStrings": { "shop_db": "Server=(localdb)\\mssqllocaldb;Database=shop_db;Trusted_Connection=True;" },
   "Serilog": {
     "Using": [],
     "MinimumLevel": {
